--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@imagekit/next": "^2.1.2",
+    "axios": "^1.9.0",
     "bcryptjs": "^3.0.2",
     "imagekit": "^6.0.0",
     "mongodb": "^6.17.0",
